kubernetes/huntarr/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: huntarr
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: huntarr
  template:
    metadata:
      labels:
        app: huntarr
    spec:
      enableServiceLinks: false
      containers:
      - name: huntarr
        image: ghcr.io/plexguide/huntarr@sha256:f84ea30ce0a358e6be628925f8e45cdcafcdff1d4bed59e4e64f493011415822
        ports:
        - containerPort: 9705
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: huntarr-config
