kubernetes/huntarr/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: huntarr

spec:
  ports:
  - port: 9705
    targetPort: 9705
    protocol: TCP
    name: http
  selector:
    app: huntarr
